--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <base href="./">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Caça</title>
+        <title>Caçando Queijos</title>
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <style>
             * {
                 margin: 0;
